<resources>
    <string name="app_name">Tic tac toe</string>
    <string name="start">Начать</string>
    <string name="new_game">Новая игра</string>
    <string name="settings">Настройки</string>
    <string name="continue_game">Продолжить игру</string>
    <string name="sound">Звук</string>
    <string name="level">Сложность</string>
    <string name="easy">Легко</string>
    <string name="rules_of_game">Правила игры</string>
    <string name="vertical_row">Ряд по вертикали</string>
    <string name="horizontal_row">Ряд по горизонтали</string>
    <string name="diagonal_row">Ряд по диагонали</string>
    <string name="backTo">Вернуться</string>
    <string name="setting">Настройки</string>
    <string name="save_and_go">Сохратинь и выйти</string>
    <string name="Menu">Меню</string>
    <string name="win_text">Вы выиграли</string>
    <string name="ok">ОК</string>

    <string name="preference_file_key">tic_tac_toe.file_key</string>
    <string-array name="game_level">
        <item>Легко</item>
        <item>Нормально</item>
        <item>Сложно</item>
    </string-array>

</resources>