<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    tools:context=".SettingActivity">

    <TextView
        android:id="@+id/SettingsLable_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/settings"
        android:textColor="@color/brown"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sound_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:text="@string/sound"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsLable_set" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:progress="55"
        android:progressDrawable="@drawable/style_seekbar"
        android:splitTrack="false"
        android:thumb="@drawable/ic_thumb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sound_set" />

    <TextView
        android:id="@+id/level_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:text="@string/level"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <ImageView
        android:id="@+id/previous_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_set"
        app:srcCompat="@drawable/previous" />

    <ImageView
        android:id="@+id/next_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/level_set"
        app:srcCompat="@drawable/next" />

    <TextView
        android:id="@+id/level_in_game_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:textSize="24sp"
        android:text="@string/easy"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="@id/previous_set"
        app:layout_constraintEnd_toStartOf="@id/next_set"
        app:layout_constraintTop_toTopOf="@+id/next_set"
        app:layout_constraintBottom_toBottomOf="@id/next_set"/>

    <TextView
        android:id="@+id/rules_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:textSize="24sp"
        android:text="@string/rules_of_game"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previous_set" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:button="@drawable/style_checkbox"
        android:checked="true"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/vertical_row"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rules_set" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:button="@drawable/style_checkbox"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/horizontal_row"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:button="@drawable/style_checkbox"
        android:fontFamily="@font/roboto_medium"
        android:padding="8dp"
        android:text="@string/diagonal_row"
        android:textColor="@color/brown"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />


</androidx.constraintlayout.widget.ConstraintLayout>